First commit putting things in correct place and styling them. Included some placeholders for content that will be later accesses through API with the help of JavaScript

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="review">
                 <h3>Review</h3>
-                It was a good movie, I really enjoyed it.
+                It was an OK movie, my mother in law enjoyed it.
             </div>
         </div>
         <div class="movie">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="review">
                     <h3>Review</h3>
-                    It was a good movie, I really enjoyed it.
+                    It was a bad movie, I really disliked it.
                 </div>
             </div>
     </main>
